# rocket-model-codegen

./: Cargo.toml  LICENSE.md  README.md
src/: gen_structs.rs  lib.rs
