[package]
name = "rocket-model-codegen"
version = "0.1.1"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
license = "MIT"
description = "Macros for generating model structs"
repository = "https://github.com/linasdev/rocket-model-codegen"
edition = "2018"

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.10"

[dependencies.syn]
version = "1.0.18"
features = ["full"]

[lib]
proc-macro = true
